# rotatar

./: Cargo.toml  justfile
app/: Cargo.toml
app/src/: main.rs
backend/: Cargo.toml
backend/src/: lib.rs  message.rs  state.rs  util.rs
backend/src/audio/: error.rs  handler.rs  mod.rs  status.rs
iced-frontend/: Cargo.toml
iced-frontend/src/: app.rs  lib.rs  util.rs
src/: app.rs  audio.rs  cli.rs  config.rs  main.rs  message.rs  state.rs  util.rs
src/audio/: error.rs
tauri-frontend/: .prettierrc  package.json  svelte.config.js  vite.config.js
tauri-frontend/src/: app.d.ts
tauri-frontend/src-tauri/: Cargo.toml  tauri.conf.json
tauri-frontend/src-tauri/src/: audio.rs  lib.rs
tauri-frontend/src/lib/: stores.svelte.ts  types.ts
tauri-frontend/src/lib/components/: DynamicSlider.svelte
tauri-frontend/src/routes/: +layout.svelte  +page.svelte
tauri-frontend/src/routes/settings/: +page.svelte
test/: test_config.json
types/: Cargo.toml
types/src/: cli.rs  color.rs  config.rs  error.rs  frontend.rs  lib.rs  numbers.rs
types/src/config/: audio.rs  general.rs  mod.rs
