[package]
name = "rotatar"
version = "0.1.0"
edition = "2021"
authors = ["ThePoultryMan"]
license = "LGLP-3.0-only"

[dependencies]
async-channel = "2.3.1"
clap = { version = "4.5.32", features = ["derive"] }
iced = { version = "0.13.1", features = ["image"] }
mouce = "0.2.51"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
