[package]
name = "rotator"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-frontend = { path = "../iced-frontend" }
rotatar-backend = { path = "../backend" }
rotatar-types.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
