[package]
name = "rotatar-backend"
version = "0.1.0"
edition = "2024"
authors = ["ThePoultryMan"]
license = "LGLP-3.0-only"

[dependencies]
cpal = "0.15.3"
rotatar-types.workspace = true
rustfft = "6.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
async-channel.workspace = true
mouce = "0.2.51"
