[package]
name = "tauri-frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
release = ["tauri/custom-protocol"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-channel.workspace = true
rotatar-backend.workspace = true
rotatar-types.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tokio.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
